plugins/traefik-ingress/traefik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 8580
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.aws-beeb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ui
          servicePort: web
